test_src/compiler_errors/types/arithmetic/DecrementBoolError1.b
class DecrementBoolError1 {
    void test() {
        Bool value = true;
        println(value--);
    }
}
